--- a/WEBSITE/public/css/styles-main-search.css
+++ b/WEBSITE/public/css/styles-main-search.css
@@ -230,6 +230,7 @@ h3{
 /* center text in table */
 table{
     text-align: center;
+    table-layout: fixed;
 }
 
 /* rounded corners of table */
@@ -251,6 +252,7 @@ thead{
     background-color: #b43c25;
     color: white;
     font-size: 22px;
+    height: 3.5vw;
 }
 
 /* rows */
@@ -265,12 +267,15 @@ tbody tr:hover{
 
 /* make table headers not bolded */
 th{
+    font-size: 1.25vw;
     font-weight: normal;
 }
 
 
 td{
+    font-size: 1.25vw;
     padding: 20px;
+    word-wrap:break-word;
 }
 
 .sig-links{
